--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,4 @@
 # These are supported funding model platforms
 
 github: [mik317,mik317,mik317,mik317]
-patreon: mik317
-open_collective: mik317
-custom: ['http://evil.com:21','http://google.com@evil.com']
+custom: ['http://ebаy.com','https://google.com@‮@moc.evil.com',]
