--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: [mik317,mik317,mik317,mik317]
-custom: ['http://ebаy.com','https://google.com@‮@moc.evil.com',]
+custom: ['javascript:alert(1)']
